--- a/calculator.css
+++ b/calculator.css
@@ -1,6 +1,21 @@
 table {
+    /* 사이즈 수정 */
+    width: 412px;
+    height: 784px;
+    min-width: 412px;
+    max-width: 412px;
+    min-height: 784px;
+    max-height: 784px;
+    /* width: 200px;
+    height: 350px;
+    min-width: 200px;
+    max-width: 200px;
+    min-height: 350px;
+    max-height: 350px; */
+    table-layout: fixed;
+
     border: 1px solid #8e8e8e;
-    border-radius: 4px;
+    border-radius: 24px;
     overflow: hidden;
     border-collapse: separate;
     border-spacing: 0;
@@ -19,27 +34,33 @@ td:last-child {
     border-right: none;
 }
 td {
-    width: 40px;
+    /* width: 40px;
     height: 50px;
-    font-size: 20px;
+    font-size: 20px; */
+    width: 103px;
+    height: 120px;
+    font-size: 50px;
     text-align: center;
     background-color: #e0e0e0;
     border-bottom: 1px solid #8e8e8e;
     border-right: 1px solid #8e8e8e;
 }
-.btnOperator,.operator {
+.btnOperator,
+.operator {
     background-color: #e89650;
     color: #ffffff;
 }
 
 #formulaDisplay {
-    height: 40px;
+    /* height: 40px; */
+    height: 92px;
     background-color: #413c3c;
     text-align: right;
     color: #ffffff;
 }
 #resultDisplay {
-    height: 40px;
+    /* height: 40px; */
+    height: 92px;
     background-color: #413c3c;
     text-align: right;
     color: #ffffff;
